tests/unit/aws/resources/kubespray/sc/opensearch-system/opensearch-master.yaml
---
# Source: opensearch/templates/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: opensearch-master-opensearch-net
  labels:
    helm.sh/chart: opensearch-2.30.1
    app.kubernetes.io/name: opensearch
    app.kubernetes.io/instance: opensearch-master
    app.kubernetes.io/version: "2.18.0"
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: opensearch-master
spec:
  ingress:
  - from:
    - podSelector:
        matchLabels:
          opensearch-master-transport-client: "true"
  podSelector:
    matchLabels:
      opensearch-master-transport-client: "true"
---
# Source: opensearch/templates/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: opensearch-master
  labels:
    helm.sh/chart: opensearch-2.30.1
    app.kubernetes.io/name: opensearch
    app.kubernetes.io/instance: opensearch-master
    app.kubernetes.io/version: "2.18.0"
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: opensearch-master
  annotations:
    {}
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: opensearch
    app.kubernetes.io/instance: opensearch-master
  ports:
  - name: http
    protocol: TCP
    port: 9200
  - name: transport
    protocol: TCP
    port: 9300
  - name: metrics
    protocol: TCP
    port: 9600
---
# Source: opensearch/templates/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: opensearch-master-headless
  labels:
    helm.sh/chart: opensearch-2.30.1
    app.kubernetes.io/name: opensearch
    app.kubernetes.io/instance: opensearch-master
    app.kubernetes.io/version: "2.18.0"
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: opensearch-master
  annotations:
    service.alpha.kubernetes.io/tolerate-unready-endpoints: "true"
spec:
  clusterIP: None # This is needed for statefulset hostnames like opensearch-0 to resolve
  # Create endpoints also if the related pod isn't ready
  publishNotReadyAddresses: true
  selector:
    app.kubernetes.io/name: opensearch
    app.kubernetes.io/instance: opensearch-master
  ports:
  - name: http
    port: 9200
  - name: transport
    port: 9300
  - name: metrics
    port: 9600
---
# Source: opensearch/templates/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: opensearch-master
  labels:
    helm.sh/chart: opensearch-2.30.1
    app.kubernetes.io/name: opensearch
    app.kubernetes.io/instance: opensearch-master
    app.kubernetes.io/version: "2.18.0"
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: opensearch-master
  annotations:
    majorVersion: "2"
spec:
  serviceName: opensearch-master-headless
  selector:
    matchLabels:
      app.kubernetes.io/name: opensearch
      app.kubernetes.io/instance: opensearch-master
  replicas: 3
  podManagementPolicy: Parallel
  updateStrategy:
    type: RollingUpdate
  volumeClaimTemplates:
  - metadata:
      name: opensearch-master
    spec:
      accessModes:
      - "ReadWriteOnce"
      resources:
        requests:
          storage: "100Gi"
  template:
    metadata:
      name: "opensearch-master"
      labels:
        helm.sh/chart: opensearch-2.30.1
        app.kubernetes.io/name: opensearch
        app.kubernetes.io/instance: opensearch-master
        app.kubernetes.io/version: "2.18.0"
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/component: opensearch-master
      annotations:
        configchecksum: e7d3f62da3c5d3deda3ffe7f7784dd538046ca0517348a84318e5aa3383ecce
    spec:
      securityContext:
        fsGroup: 1000
        runAsUser: 1000
      serviceAccountName: "opensearch-master"
      automountServiceAccountToken: false
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 1
            podAffinityTerm:
              topologyKey: kubernetes.io/hostname
              labelSelector:
                matchExpressions:
                - key: app.kubernetes.io/instance
                  operator: In
                  values:
                  - opensearch-master
                - key: app.kubernetes.io/name
                  operator: In
                  values:
                  - opensearch
      terminationGracePeriodSeconds: 120
      volumes:
      - name: config
        configMap:
          name: opensearch-master-config
      - emptyDir: {}
        name: config-emptydir
      - name: opensearch-transport-cert
        secret:
          secretName: opensearch-transport-cert
          defaultMode: 256
      - name: opensearch-http-cert
        secret:
          secretName: opensearch-http-cert
          defaultMode: 256
      - name: keystore
        emptyDir: {}
      - name: keystore-opensearch-s3-secret
        secret: 
            secretName: opensearch-s3-secret

      enableServiceLinks: true
      containers:
      - name: "opensearch"
        securityContext:
          capabilities:
            drop:
            - ALL
          runAsGroup: 1000
          runAsNonRoot: true
          runAsUser: 1000
        command:
        - sh
        - -c
        - |
          #!/usr/bin/env bash
          set -euo pipefail
          ./bin/opensearch-plugin install -b repository-s3

          bash opensearch-docker-entrypoint.sh

        image: "opensearchproject/opensearch:2.18.0"
        imagePullPolicy: "IfNotPresent"
        readinessProbe:
          failureThreshold: 3
          periodSeconds: 5
          tcpSocket:
            port: 9200
          timeoutSeconds: 3
        startupProbe:
          failureThreshold: 30
          initialDelaySeconds: 5
          periodSeconds: 10
          tcpSocket:
            port: 9200
          timeoutSeconds: 3
        ports:
        - name: http
          containerPort: 9200
        - name: transport
          containerPort: 9300
        - name: metrics
          containerPort: 9600
        resources:
          limits:
            cpu: 1
            memory: 3Gi
          requests:
            cpu: 100m
            memory: 2Gi
        volumeMounts:
        - name: "opensearch-master"
          mountPath: /usr/share/opensearch/data
        - name: keystore
          mountPath: /usr/share/opensearch/config/opensearch.keystore
          subPath: opensearch.keystore
        - name: opensearch-transport-cert
          mountPath: /usr/share/opensearch/config/transport
        - name: opensearch-http-cert
          mountPath: /usr/share/opensearch/config/http
        - name: config-emptydir
          mountPath: /usr/share/opensearch/config/opensearch.yml
          subPath: opensearch.yml
---
# Source: opensearch/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: opensearch-master
  labels:
    helm.sh/chart: opensearch-2.30.1
    app.kubernetes.io/name: opensearch
    app.kubernetes.io/instance: opensearch-master
    app.kubernetes.io/version: "2.18.0"
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: opensearch-master
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-staging
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    nginx.ingress.kubernetes.io/proxy-body-size: 32m
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - opensearch.ops.ck8s.example.com
      secretName: opensearch-ingress-cert
  rules:
    - host: "opensearch.ops.ck8s.example.com"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: opensearch-master
                port:
                  number: 9200
